--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -42,7 +42,7 @@
   --ifm-color-primary-light: #a86700;
   --ifm-color-primary-lighter: #b06c00;
   --ifm-color-primary-lightest: #c77a00;
-  --ifm-code-font-size: 95%;
+  --ifm-code-font-size: 92%;
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
@@ -63,12 +63,13 @@
   --ifm-color-primary-light: #fab03b;
   --ifm-color-primary-lighter: #fab649;
   --ifm-color-primary-lightest: #fbc672;
+  --ifm-navbar-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.3);
   --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
 }
 
 html[data-theme='dark'] {
   --ifm-background-color: #272727;
-  --ifm-background-surface-color: #202020;
+  --ifm-background-surface-color: #222222;
   --ifm-footer-background-color: var(--ifm-background-surface-color);
   --ifm-hover-overlay: #462E08;
 }
