--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -34,6 +34,10 @@
   font-family: "JetBrainsMono", sans-serif !important;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 :root {
   --ifm-color-primary: #a36500;
   --ifm-color-primary-dark: #935b00;
@@ -44,7 +48,6 @@
   --ifm-color-primary-lightest: #d48300;
   --ifm-code-font-size: 92%;
   --ifm-heading-color: var(--ifm-color-primary);
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
 [data-theme='light'] {
@@ -53,6 +56,7 @@
   --ifm-footer-background-color: var(--ifm-background-surface-color);
   --ifm-hover-overlay: #fcefda;
   --ifm-color-content-secondary: var(--ifm-color-emphasis-800);
+  --docusaurus-highlighted-code-line-bg: var(--ifm-hover-overlay);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
@@ -65,7 +69,7 @@
   --ifm-color-primary-lighter: #fab649;
   --ifm-color-primary-lightest: #fbc672;
   --ifm-navbar-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.5);
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --docusaurus-highlighted-code-line-bg: var(--ifm-hover-overlay);
 }
 
 html[data-theme='dark'] {
