--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -129,16 +129,74 @@ html[data-theme='dark'] {
   }
 }
 
+/* pdf download button */
 .download-pdf-link {
   width: 40px;
   height: 40px;
   display: flex;
   background-color: var(--ifm-navbar-link-hover-color);
-  mask-image: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M40,32.7c-0.4-2-0.5-3.2,0-4.8c0.1-0.3,0.2-0.6,0.3-0.7c0.1,0.1,0.1,0.3,0.2,0.6c0.4,2.2,0.4,2.9-0.2,5.8  C40.1,33.2,40,33,40,32.7z M41.6,45.3c-0.3,1-0.7,2.1-1.1,3.5c-1.1,3.3-1.6,4.6-1.8,5.3c-0.3,1-0.3,1-1,2.6l-0.1,0.2  c-0.2,0.6-0.5,1.2-0.8,1.8c2.2-0.9,3.7-1.4,6.2-2.2l1.4-0.5c1-0.3,1.9-0.6,2.6-0.9c0.3-0.1,0.6-0.2,0.9-0.3  c-0.6-0.7-1.1-1.5-1.8-2.4C44.3,50,43.1,48,41.6,45.3z M23.9,70.8c-0.7,1.8-0.4,2-0.3,2.1c0.3,0.2,0.8,0.4,1.2,0.1  c0.6-0.6,0.8-1,1.8-2.9c0.3-0.5,0.6-1.2,1-1.9c0.1-0.2,0.2-0.4,0.3-0.6C26.1,68.6,24.2,69.8,23.9,70.8z M61,59  c0.4-0.1,0.6-0.2,0.6-0.2c0-0.1,0-0.4,0-0.7c0-0.1-0.3-0.5-1.3-0.7c-1.5-0.3-2.5-0.3-3.4-0.3c-0.3,0-0.6,0-0.8,0  c1.7,1.4,2.5,1.8,3,1.9C59.3,59.1,60.2,59.1,61,59z M73.5,54.5v14.4L53.7,89H21.4c-5.5,0-9.9-4.5-9.9-10.1V21.1  c0-5.6,4.4-10.1,9.9-10.1h42.2c5,0,9,3.7,9.8,8.5C63.8,19.6,56,27.4,56,37C56,46.7,63.8,54.5,73.5,54.5z M68.7,70.9H58.6  c-1.7,0-3,1.3-3,3l0,10.3L68.7,70.9z M60.9,53.4c-1.8-0.3-3-0.3-4.1-0.3c-1.1,0-2,0.1-3.4,0.3c-0.4,0.1-0.9,0.2-1.2,0.2  c-1-1-1.7-2-2.8-3.5c-2.1-3-3.4-5.1-5.5-8.8c-0.3-0.5-0.6-1.1-0.9-1.6c0.2-0.9,0.4-1.9,0.6-3.1l0.3-1.4c0.8-3.8,1-5.1,0.4-8.2  c-0.7-3.4-3-4.2-4.2-4.1v0c-0.6,0-3,0.4-4,3.9c-0.7,2.4-0.6,4.2,0,6.7c0.4,1.8,1.3,4,2.8,6.7c-0.5,2.1-1.1,4-2.2,7.2  c-1.1,3.3-1.6,4.6-1.8,5.4c-0.3,0.9-0.3,0.9-0.9,2.4l-0.1,0.2c-0.7,1.9-1.9,4.2-2.7,5.7c-1.2,0.6-2.4,1.2-4.1,2.2  c-3.6,2.1-6.1,3.6-7,6c-0.5,1.3-1.7,4.5,0.9,6.6c0.9,0.8,2.1,1.2,3.2,1.2c1.2,0,2.3-0.4,3.2-1.2c1.1-1.1,1.7-2.1,2.7-4  c0.3-0.5,0.6-1.1,1-1.9c1.6-3.1,2.6-5.2,2.8-5.5c0-0.1,0.1-0.2,0.2-0.3c0.7-0.3,1.5-0.6,2.4-1c3.3-1.4,4.7-1.8,7.7-2.8l1.4-0.5  c1.1-0.4,1.9-0.6,2.7-0.9c1-0.4,1.8-0.6,2.6-0.9c0.7,0.6,1.4,1.3,2.3,2c1.9,1.6,3.2,2.4,4.6,2.8c1.2,0.3,2.9,0.2,4-0.1  c3.5-0.9,3.6-3.5,3.7-4.6C65.6,56.7,64.7,54.1,60.9,53.4z M88.5,37c0,8.3-6.7,15-15,15c-8.3,0-15-6.7-15-15c0-8.3,6.7-15,15-15  C81.8,22,88.5,28.7,88.5,37z M80,39.5c0-0.4-0.1-0.8-0.4-1.1c-0.6-0.6-1.5-0.6-2.1,0L75,40.9V29.5c0-0.8-0.7-1.5-1.5-1.5  S72,28.7,72,29.5v11.4l-2.4-2.4c-0.6-0.6-1.5-0.6-2.1,0c-0.6,0.6-0.6,1.5,0,2.1l5,5c0,0,0.1,0.1,0.1,0.1c0.2,0.2,0.5,0.3,0.8,0.4  c0.1,0,0.1,0,0.2,0c0,0,0.1,0,0.1,0c0.4,0,0.7-0.2,1-0.4l5-5C79.9,40.3,80,39.9,80,39.5z'/%3E%3C/svg%3E");
+  mask-image: url(/img/svg/filetype-pdf.svg);
   transition: background-color var(--ifm-transition-fast)
     var(--ifm-transition-timing-default);
 }
 
 .download-pdf-link:hover {
   background-color: var(--ifm-navbar-link-color);
+}
+
+/* menu icon and badge*/
+.new > .menu__link::after {
+  content: "NEW";
+  font-size: 75%;
+  color: white;
+  background-color: red;
+  padding: 2px 6px;
+  text-align: center;
+  border-radius: 5px;
+  margin-left: 0.75rem;
+}
+
+/* menu icon*/
+.menu__link::before {
+  content: "";
+  margin-right: 0.75rem;
+  width: 20px;
+  height: 20px;
+  background-color: var(--ifm-menu-color);
+}
+
+.menu__link--active::before {
+  background-color: var(--ifm-menu-color-active);
+}
+
+.home-menu > .menu__link::before {
+  mask-image: url(/img/svg/house-door.svg);
+}
+
+.resume-menu > .menu__link::before {
+  mask-image: url(/img/svg/file-earmark-person.svg);
+}
+
+.scripting-notes-menu .menu__link--sublist-caret::before {
+  mask-image: url(/img/svg/journal-code.svg);
+}
+
+.signing-commits-menu > .menu__link::before {
+  mask-image: url(/img/svg/patch-check.svg);
+}
+
+.diy-projects-menu .menu__link--sublist-caret::before {
+  mask-image: url(/img/svg/tools.svg);
+}
+
+.arcade-stick-menu > .menu__link::before {
+  mask-image: url(/img/svg/controller.svg);
+}
+
+.split-keyboard-menu > .menu__link::before {
+  mask-image: url(/img/svg/keyboard.svg);
+}
+
+.painting-minis-menu > .menu__link::before {
+  mask-image: url(/img/svg/brush.svg);
 }
